--- a/4645084/style/scss/_header.scss
+++ b/4645084/style/scss/_header.scss
@@ -1,6 +1,15 @@
 .header {
   position: relative;
 }
+.progress-bar{
+  position: fixed;
+  width: 100%;
+  height: 30px;
+  border-radius: 0 15px 15px 0;
+  top: 0;
+  left: 0;
+  z-index: 100;
+}
 .header-content_fixed {
     position: fixed;
     width: 100%;
