--- a/villaride/style/scss/_footer.scss
+++ b/villaride/style/scss/_footer.scss
@@ -1,12 +1,17 @@
 .footer {
-  height: 205px;
+  min-height: 205px;
+  margin: 80px 0 0 0;
   padding: 25px 0 0 0;
   background-color: $mainColor;
   background-image: url('../image/herb.png');
   background-repeat: no-repeat;
   background-position: -15% top;
   box-shadow: 0px -10px 10px 5px rgba(34, 60, 80, 0.3);
+  @media (max-width: 1100px) { background-position: 50% 200%;}
   > div {
+    @media (max-width: 1100px) { flex-wrap: wrap;}
+    @media (max-width: 900px) { padding: 0 30px; }
+    @media (max-width: 750px) { flex-direction: column;}
     > .header-navigation {
       flex-grow: 1;
       list-style-type: none;
@@ -14,7 +19,10 @@
       font-family: 'Proxima Nova Lt';
       padding: 0 30px;
       font-size: 1.1em;
+      @media (max-width: 750px) { justify-content: space-between; width: 100%; padding: 0;}
+      @media (max-width: 450px) { flex-direction: column;}
       > li {
+        @media (max-width: 450px) { margin: 10px 0;}
         > a {
           border-bottom: 1px solid rgba(255, 255, 255, 1);
           transition: $transition;
@@ -26,6 +34,7 @@
     }
     > .header-tel {
       margin: 0 25px 0 0;
+      @media (max-width: 450px) { margin: 25px 0 0 0; }
       > a {
         font-family: 'Proxima Nova Rg';
         letter-spacing: 0.02em;
@@ -52,24 +61,31 @@
         background-color: #404040;
         color: white;
       }
+      @media (max-width: 1100px) { margin: 0 auto; }
+      @media (max-width: 900px) { margin: 0; }
+      @media (max-width: 450px) { margin: 25px 0 0 0; }
     }
   }
   > .footer-bottom-content {
     padding: 25px 0 0 0;
     > div {
+      @media (max-width: 450px) { flex-direction: column; justify-content: center; align-items: center;}
       > .footer-ogrn {
         font-family: 'Proxima Nova Lt';
         font-size: 1.1em;
+        @media (max-width: 450px) { text-align: center;}
       }
       > .footer-privacy {
         font-family: 'Proxima Nova Lt';
         font-size: 1.1em;
         margin: 10px 0 0 0;
+        @media (max-width: 450px) { text-align: center;}
       }
       > .footer-copy {
         font-family: 'Proxima Nova Lt';
         font-size: 1.1em;
         margin: 10px 0 0 0;
+        @media (max-width: 450px) { text-align: center;}
       }
       > .footer-tel {
         font-family: 'Proxima Nova Bl';
@@ -80,13 +96,17 @@
           margin: 0 0 10px 0;
         }
       }
-      > div > div {
-        margin: 0 15px 20px 0;
-        > .image {
-          margin: 3px 10px 0 0;
-        }
-        > .info {
-          max-width: 200px;
+      > div {
+        @media (max-width: 450px) { margin: 10px 0; }
+        > div {
+          margin: 0 15px 20px 0;
+          @media (max-width: 450px) { margin: 10px 0; }
+          > .image {
+            margin: 3px 10px 0 0;
+          }
+          > .info {
+            max-width: 200px;
+          }
         }
       }
     }
