--- a/villaride/style/scss/_header.scss
+++ b/villaride/style/scss/_header.scss
@@ -6,7 +6,12 @@
   left: 0;
   z-index: 1000;
   box-shadow: 0px 10px 10px 5px rgba(34, 60, 80, 0.3);
+  @media (max-width: 500px) {height: auto;}
   > div {
+    height: 100%;
+    @media (max-width: 1100px) {padding: 0 25px;}
+    @media (max-width: 550px) {padding: 0 10px;}
+    @media (max-width: 500px) {display: none;}
     > .header-navigation {
       flex-grow: 1;
       list-style-type: none;
@@ -14,6 +19,7 @@
       font-family: 'Proxima Nova Lt';
       padding: 0 30px;
       font-size: 1.1em;
+      @media (max-width: 1100px) { display: none; }
       > li {
         > a {
           border-bottom: 1px solid rgba(255, 255, 255, 1);
@@ -41,6 +47,7 @@
         text-transform: uppercase;
         font-size: 0.7em;
       }
+      @media (max-width: 1100px) { margin: 0 0 0 0; }
     }
     > .header-button {
       height: 40px;
@@ -51,6 +58,70 @@
       &:hover {
         background-color: #404040;
         color: white;
+      }
+      @media (max-width: 750px) { display: none; }
+    }
+    > .mobile-navigation {
+      display: none;
+      cursor: pointer;
+      font-size: 2.5em;
+      font-weight: 900;
+      position: relative;
+      @media (max-width: 1100px) {display: flex;}
+      &:hover > ul {display: flex;}
+      > ul {
+        padding: 5px;
+        position: absolute;
+        top: 100%;
+        right: 0;
+        display: none;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-end;
+        background-color: white;
+        box-shadow: 0px 10px 10px 5px rgba(34, 60, 80, 0.3);
+        border-radius: 5px;
+        transition: $transition;
+        > li {
+          margin: 5px 0;
+          list-style-type: none;
+          text-transform: uppercase;
+          font-family: 'Proxima Nova Lt';
+          font-size: 0.5em;
+          > a {
+            &:hover {
+              text-decoration: underline;
+            }
+          }
+        }
+      }
+    }
+  }
+  > .mobile-header {
+    display: none;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
+    @media (max-width: 500px) {display: flex;}
+    > div {
+      > .header-tel {
+        margin: 0 25px 0 0;
+        > a {
+          font-family: 'Proxima Nova Rg';
+          letter-spacing: 0.02em;
+          font-size: 1.5em;
+          font-weight: 700;
+          span {
+            font-family: 'Proxima Nova Bl';
+            color: #1f7ec0;
+          }
+        }
+        > p {
+          font-family: 'Proxima Nova Lt';
+          text-transform: uppercase;
+          font-size: 0.7em;
+        }
+        @media (max-width: 1100px) { margin: 0 0 0 0; }
       }
     }
   }
