--- a/4649647/templates/css/schema/dark.css
+++ b/4649647/templates/css/schema/dark.css
@@ -29,20 +29,10 @@
     display: inline-flex;
     align-items: center;
     justify-content: center;
-    -webkit-box-shadow: inset 0 0 0 8px #fff;
-    -moz-box-shadow: inset 0 0 0 8px #fff;
     -ms-box-shadow: inset 0 0 0 8px #fff;
     -o-box-shadow: inset 0 0 0 8px #fff;
     box-shadow: inset 0 0 0 8px #fff;
-    -webkit-border-radius: 4px;
-    -moz-border-radius: 4px;
-    -ms-border-radius: 4px;
-    -o-border-radius: 4px;
     border-radius: 4px;
-    -webkit-transition: all 0.3s ease;
-    -moz-transition: all 0.3s ease;
-    -ms-transition: all 0.3s ease;
-    -o-transition: all 0.3s ease;
     transition: all 0.3s ease;
 
     border: 0;
@@ -55,8 +45,6 @@
     /*background-color: white!important; background: white!important; color: black;*/
     background: none;
     color: #fff;
-    -webkit-box-shadow: inset 0 0 0 5px #fff;
-    -moz-box-shadow: inset 0 0 0 5px #fff;
     -ms-box-shadow: inset 0 0 0 5px #fff;
     -o-box-shadow: inset 0 0 0 5px #fff;
     box-shadow: inset 0 0 0 5px #fff;
@@ -72,7 +60,7 @@
    color: black; background-color: white;
 }
 .schema-color-sidebar-menu .mobile-sidebar-menu-content{
-   background-color: #002f34;  
+   background-color: #002f34;
 }
 .schema-color-sidebar-menu .mobile-sidebar-loc span{
     color: white;
@@ -87,10 +75,10 @@
     background-color: #202c43;
 }
 .schema-color-sidebar-menu .mobile-sidebar-footer a{
-    color: white; border: 2px solid white; background-color: #002f34!important; background: #002f34!important; 
+    color: white; border: 2px solid white; background-color: #002f34!important; background: #002f34!important;
 }
 .schema-color-sidebar-menu .mobile-sidebar-footer a:hover{
-    color: black; background-color: white!important; background: white!important; 
+    color: black; background-color: white!important; background: white!important;
 }
 .schema-color-sidebar-menu .mobile-sidebar-close i:hover{
     color: white;
@@ -105,7 +93,7 @@
 .custom-control-input:checked~.custom-control-label::before{
     color: #fff;
     border-color: #002f34;
-    background-color: #002f34;    
+    background-color: #002f34;
 }
 .uni-dropdown-content span:hover{
     background-color: #002f34; color: white;
@@ -118,10 +106,10 @@
 }
 
 .user-menu .active {
-    color: #002f34; font-weight: bold; 
+    color: #002f34; font-weight: bold;
 }
 .user-menu a:hover{
-    background-color: #002f34; color: white; 
+    background-color: #002f34; color: white;
 }
 .checkbox input:checked + span:after {
     background-color: #002f34;
@@ -144,13 +132,15 @@
     background: #002f34!important;
     border-color: #002f34!important;
 }
-.footer-bg{
-    background-color: #002f34; color: white;
+.footer-bg {
+    /* background-color: #002f34; color: white; */
+    background-color: #fafafa; color: #595959;
 }
-.footer-list-link a{
-    color: white;
+.footer-list-link a {
+    /* color: white; */
+    color: #595959;
 }
-footer{
+footer {
     padding: 35px 0px; border: none;
 }
 .geo-list-popular .item-city:hover, .geo-list-popular .item-city-country:hover{
@@ -163,12 +153,10 @@ footer{
     background-color: #002f34; color: white;
 }
 .schema-color-button{
-    background-color: #002f34!important; color: white!important; 
+    background-color: #002f34!important; color: white!important;
 }
 .btn-color-gradient{
     background: rgba(120, 82, 249, 1.0);
-    background: -webkit-linear-gradient(top left, rgba(120, 82, 249, 1.0), rgba(173, 99, 231, 1.0));
-    background: -moz-linear-gradient(top left, rgba(120, 82, 249, 1.0), rgba(173, 99, 231, 1.0));
     background: linear-gradient(to bottom right, rgba(120, 82, 249, 1.0), rgba(173, 99, 231, 1.0));
 }
 .modal-geo-options-tab div.active {
@@ -209,8 +197,3 @@ footer{
 .item-country-hover.active{
    background-color: #002f34; color: white;
 }
-
-
-
-
-
