--- a/4649647/templates/css/styles.css
+++ b/4649647/templates/css/styles.css
@@ -492,14 +492,56 @@ footer{
 	border-top: 2px solid #D7DEED; padding: 35px 0px;
 }
 
-.footer-list-text{
+.footer-list-text {
   color: rgb(133, 133, 133); margin-bottom: 0px;
 }
 .mt10{
    margin-top: 10px!important;
 }
-.footer-list-link a:hover{
+.footer-list-link a:hover {
 	color: #0069D9;
+}
+.footer-list-icons {
+  display: flex;
+  justify-content: center;
+}
+.footer-list-icons > div {
+  height: 30px;
+  width: 30px;
+  cursor: pointer;
+  transition: 0.2s;
+  margin: 0 5px;
+}
+.footer-list-icons > div:hover {
+  transform: scale(1.1);
+}
+.footer-list-icons > div > img {
+  height: 100%;
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.footer-list-apps {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+.footer-list-apps > div {
+  height: 50px;
+  width: calc(50%);
+  transition: 0.2s;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+}
+.footer-list-apps > div:hover {
+  transform: scale(1.1);
+}
+.footer-list-apps > div > img {
+  height: 100%;
+  width: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 @media (max-width: 576px) {
     .user-balance-payment > div{ width: 100%!important; margin-left: 0px!important; margin-right: 0px!important;  }
