--- a/villaride/style/index.css
+++ b/villaride/style/index.css
@@ -7,6 +7,7 @@
 html {
   width: 100%;
   height: 100%;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -827,15 +828,14 @@ button {
   position: relative;
   z-index: 1;
   height: 100%;
-  width: 100%;
-  background-color: pink;
   border-radius: 50px;
   border: 3px solid white;
+  background-color: white;
   box-shadow: 0px 10px 10px 10px rgba(50, 50, 50, 0.5);
   transition: 0.3s;
 }
 .block-3 > div > .block-3-video > div:hover {
-  border: 3px solid red;
+  cursor: pointer;
 }
 .block-3 > div > .block-3-video > div > .title {
   border-radius: 50px;
@@ -854,6 +854,14 @@ button {
 }
 .block-3 > div > .block-3-video > div > .play-btn:hover {
   transform: scale(1.1) translateX(-49%) translateY(-49%);
+}
+.block-3 > div > .block-3-video > div > video {
+  height: 100%;
+  width: 100%;
+  outline: none;
+  border-radius: 50px;
+  -o-object-fit: cover;
+  object-fit: cover;
 }
 
 .block-4 {
