--- a/villaride/style/scss/_block-3.scss
+++ b/villaride/style/scss/_block-3.scss
@@ -56,14 +56,13 @@
         position: relative;
         z-index: 1;
         height: 100%;
-        width: 100%;
-        background-color: pink;
         border-radius: 50px;
         border: 3px solid white;
+        background-color: white;
         box-shadow: 0px 10px 10px 10px rgba(50, 50, 50, 0.5);
         transition: $transition;
         &:hover {
-          border: 3px solid red;
+          cursor: pointer;
         }
         > .title {
           border-radius: 50px;
@@ -83,7 +82,16 @@
             transform: scale(1.1) translateX(-49%) translateY(-49%);
           }
         }
+        > video {
+          height: 100%;
+          width: 100%;
+          outline: none;
+          border-radius: 50px;
+          -o-object-fit: cover;
+             object-fit: cover;
+        }
       }
+
     }
   }
 }
