--- a/villaride/style/index.css
+++ b/villaride/style/index.css
@@ -90,6 +90,79 @@ button {
   text-align: left;
 }
 
+.btn-green {
+  transition: 0.1s;
+  background: #29cb4f;
+  background: linear-gradient(to bottom, #29cb4f 0%, #129030 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr="#29cb4f", endColorstr="#129030",GradientType=0 );
+}
+.btn-green:hover {
+  background: #008720;
+  background: linear-gradient(to bottom, #008720 0%, #005c16 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr="#008720", endColorstr="#005c16",GradientType=0 );
+}
+.btn-green:active {
+  box-shadow: 0px 5px 10px 2px #223c50 inset;
+}
+
+.btn-blue {
+  transition: 0.1s;
+  background: #0a8ce5;
+  background: linear-gradient(to bottom, #0a8ce5 0%, #0962a0 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr="#0a8ce5", endColorstr="#0962a0",GradientType=0 );
+}
+.btn-blue:hover {
+  background: #00548d;
+  background: linear-gradient(to bottom, #00548d 0%, #003a62 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr="#00548d", endColorstr="#003a62",GradientType=0 );
+}
+.btn-blue:active {
+  box-shadow: 0px 5px 10px 2px #223c50 inset;
+}
+
+.btn-red {
+  transition: 0.1s;
+  background: #ff5400;
+  background: linear-gradient(to bottom, #ff5400 0%, #ed1200 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr="#ff5400", endColorstr="#ed1200",GradientType=0 );
+}
+.btn-red:hover {
+  background: #892d00;
+  background: linear-gradient(to bottom, #892d00 0%, #830a00 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr="#892d00", endColorstr="#830a00",GradientType=0 );
+}
+.btn-red:active {
+  box-shadow: 0px 5px 10px 2px #223c50 inset;
+}
+
+.btn-white {
+  transition: 0.1s;
+  color: #505050;
+  border: 2px solid #505050;
+  background-color: white;
+}
+.btn-white:hover {
+  background: #0a8ce5;
+  background: linear-gradient(to bottom, #0a8ce5 0%, #09629f 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr="#0a8ce5", endColorstr="#09629f",GradientType=0 );
+  color: white;
+  border: none;
+}
+.btn-white:active {
+  box-shadow: 0px 5px 10px 2px #223c50 inset;
+}
+
+.input-text {
+  transition: 0.1s;
+  border: 1px solid #cacaca;
+}
+.input-text:hover {
+  border: 1px solid #23bc47;
+}
+.input-text:active {
+  box-shadow: 0px 5px 10px 2px #223c50 inset;
+}
+
 .header {
   height: 90px;
   background-color: white;
@@ -135,12 +208,19 @@ button {
     display: none;
   }
 }
-.header > div > .header-navigation > li > a {
-  border-bottom: 1px solid white;
-  transition: 0.3s;
+.header > div > .header-navigation > li {
+  padding: 10px 0 0 0;
 }
-.header > div > .header-navigation > li > a:hover {
-  border-bottom: 1px solid #404040;
+.header > div > .header-navigation > li > a:hover > .decoration {
+  background-color: #25c24a;
+}
+.header > div > .header-navigation > li > a > .decoration {
+  background-color: none;
+  height: 6px;
+  width: 100%;
+  border-radius: 6px;
+  transition: 0.3s;
+  margin-top: 5px;
 }
 .header > div > .header-tel {
   margin: 0 25px 0 0;
@@ -169,12 +249,6 @@ button {
   height: 40px;
   width: 200px;
   border-radius: 20px;
-  border: 1px solid #404040;
-  transition: 0.3s;
-}
-.header > div > .header-button:hover {
-  background-color: #404040;
-  color: white;
 }
 @media (max-width: 750px) {
   .header > div > .header-button {
@@ -270,6 +344,11 @@ button {
   background-image: url("../image/bg-1.jpg");
   background-repeat: no-repeat;
   background-position: center top;
+  position: relative;
+}
+.block-1 > a[name=contacts] {
+  position: absolute;
+  top: -150px;
 }
 @media (max-width: 700px) {
   .block-1 > div {
@@ -371,16 +450,10 @@ button {
   border-radius: 27px;
   outline: none;
   border: none;
-  background: #0a8ce5;
-  background: linear-gradient(to bottom, #0a8ce5 0%, #09629f 100%);
   font-family: "Proxima Nova Rg";
   color: white;
   text-transform: uppercase;
   font-size: 1.1em;
-  transition: 0.3s;
-}
-.block-1 > div > .block-1-left > .block-1-buttons > .button:hover {
-  box-shadow: 0px 5px 5px 0px rgba(50, 50, 50, 0.5);
 }
 .block-1 > div > .block-1-left > .block-1-buttons > .text {
   margin: 0 0 0 25px;
@@ -468,7 +541,6 @@ button {
   height: 50px;
   width: 100%;
   margin: 0 0 20px 0;
-  border: 1px solid #cacaca;
   border-radius: 25px;
   outline: none;
   padding-left: 20px;
@@ -476,10 +548,6 @@ button {
   box-sizing: border-box;
   font-family: "Proxima Nova Lt";
   font-size: 1em;
-  transition: 0.3s;
-}
-.block-1 > div > .block-1-right > .block-1-form > input:hover {
-  box-shadow: 0px 5px 5px 0px rgba(50, 50, 50, 0.5);
 }
 .block-1 > div > .block-1-right > .block-1-form > button {
   height: 50px;
@@ -488,16 +556,10 @@ button {
   outline: none;
   border: none;
   border-radius: 25px;
-  background: #ff5400;
-  background: linear-gradient(to bottom, #ff5400 0%, #ed1200 100%);
   font-family: "Proxima Nova Rg";
   color: white;
   text-transform: uppercase;
   font-size: 1.1em;
-  transition: 0.3s;
-}
-.block-1 > div > .block-1-right > .block-1-form > button:hover {
-  box-shadow: 0px 5px 5px 0px rgba(50, 50, 50, 0.5);
 }
 .block-1 > div > .block-1-right > .block-1-form > .form-checkbox > input[type=checkbox]:checked ~ .checkbox-field {
   background-color: grey;
@@ -868,6 +930,10 @@ button {
   position: relative;
   overflow: hidden;
 }
+.block-4 > a[name=catalog] {
+  position: absolute;
+  top: -100px;
+}
 .block-4 > .bg-image {
   position: absolute;
   z-index: 0;
@@ -1128,16 +1194,10 @@ button {
   outline: none;
   border: none;
   border-radius: 20px;
-  background: #0a8ce5;
-  background: linear-gradient(to bottom, #0a8ce5 0%, #09629f 100%);
   font-family: "Proxima Nova Rg";
   color: white;
   text-transform: uppercase;
   font-size: 1.1em;
-  transition: 0.3s;
-}
-.block-4 > div > div > .card > .left > .contact > div > button:hover {
-  box-shadow: 0px 5px 5px 0px rgba(50, 50, 50, 0.5);
 }
 .block-4 > div > div > .card > .left > .contact > p {
   font-family: "Proxima Nova Lt";
@@ -1182,7 +1242,6 @@ button {
 .block-4 > div > div > .card > .block-4-form > input {
   height: 50px;
   width: 100%;
-  border: 1px solid #cacaca;
   border-radius: 25px;
   outline: none;
   padding-left: 20px;
@@ -1190,10 +1249,6 @@ button {
   box-sizing: border-box;
   font-family: "Proxima Nova Lt";
   font-size: 1em;
-  transition: 0.3s;
-}
-.block-4 > div > div > .card > .block-4-form > input:hover {
-  box-shadow: 0px 5px 5px 0px rgba(50, 50, 50, 0.5);
 }
 .block-4 > div > div > .card > .block-4-form > button {
   height: 50px;
@@ -1201,16 +1256,10 @@ button {
   outline: none;
   border: none;
   border-radius: 25px;
-  background: #29cb4f;
-  background: linear-gradient(to bottom, #29cb4f 0%, #139231 100%);
   font-family: "Proxima Nova Rg";
   color: white;
   text-transform: uppercase;
   font-size: 1.1em;
-  transition: 0.3s;
-}
-.block-4 > div > div > .card > .block-4-form > button:hover {
-  box-shadow: 0px 5px 5px 0px rgba(50, 50, 50, 0.5);
 }
 .block-4 > div > div > .card > .block-4-form > .form-checkbox > input[type=checkbox]:checked ~ .checkbox-field {
   background-color: grey;
@@ -1268,6 +1317,14 @@ button {
   border-radius: 10px;
 }
 
+.block-5 {
+  position: relative;
+  padding: 50px 0 0 0;
+}
+.block-5 > a[name=video] {
+  position: absolute;
+  top: -80px;
+}
 .block-5 > div > .title > h2 {
   text-align: center;
   font-family: "Proxima Nova Bl";
@@ -1536,7 +1593,6 @@ button {
 .block-6 > div > div > .block-6-form > div > input {
   height: 50px;
   width: 300px;
-  border: 1px solid #cacaca;
   box-sizing: border-box;
   outline: none;
   border-radius: 25px;
@@ -1551,16 +1607,10 @@ button {
   outline: none;
   border: none;
   border-radius: 25px;
-  background: #29cb4f;
-  background: linear-gradient(to bottom, #29cb4f 0%, #139231 100%);
   font-family: "Proxima Nova Rg";
   color: white;
   text-transform: uppercase;
   font-size: 1.1em;
-  transition: 0.3s;
-}
-.block-6 > div > div > .block-6-form > div > button:hover {
-  box-shadow: 0px 5px 5px 0px rgba(50, 50, 50, 0.5);
 }
 .block-6 > div > div > .block-6-form > .form-checkbox > input[type=checkbox]:checked ~ .checkbox-field {
   background-color: grey;
@@ -1587,6 +1637,14 @@ button {
   color: #2c9837;
 }
 
+.block-7 {
+  position: relative;
+  padding: 50px 0 0 0;
+}
+.block-7 > a[name=feedback] {
+  position: absolute;
+  top: -80px;
+}
 .block-7 > div > .title > h2 {
   text-align: center;
   font-family: "Proxima Nova Bl";
@@ -1795,6 +1853,14 @@ button {
   background-color: white;
 }
 
+.block-8 {
+  position: relative;
+  padding: 50px 0 0 0;
+}
+.block-8 > a[name=gallery] {
+  position: absolute;
+  top: -80px;
+}
 .block-8 > div > .title > h2 {
   text-align: center;
   font-family: "Proxima Nova Bl";
@@ -2058,17 +2124,24 @@ button {
     flex-direction: column;
   }
 }
+.footer > div > .header-navigation > li {
+  padding: 10px 0 0 0;
+}
 @media (max-width: 450px) {
   .footer > div > .header-navigation > li {
     margin: 10px 0;
   }
 }
-.footer > div > .header-navigation > li > a {
-  border-bottom: 1px solid white;
-  transition: 0.3s;
+.footer > div > .header-navigation > li > a:hover > .decoration {
+  background-color: #25c24a;
 }
-.footer > div > .header-navigation > li > a:hover {
-  border-bottom: 1px solid #404040;
+.footer > div > .header-navigation > li > a > .decoration {
+  background-color: none;
+  height: 6px;
+  width: 100%;
+  border-radius: 6px;
+  transition: 0.3s;
+  margin-top: 5px;
 }
 .footer > div > .header-tel {
   margin: 0 25px 0 0;
@@ -2185,6 +2258,39 @@ button {
 }
 .footer > .footer-bottom-content > div > div > div > .info {
   max-width: 200px;
+}
+
+.modals {
+  position: fixed;
+  top: 90px;
+  left: 0;
+  height: calc(100vh - 90px);
+  width: 100%;
+  background-color: rgba(84, 84, 84, 0.9);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 100;
+  overflow-y: auto;
+}
+@media (max-width: 500px) {
+  .modals {
+    top: 125px;
+  }
+}
+.modals > .modal-info {
+  height: 100px;
+  width: 100px;
+  background-color: white;
+}
+.modals > .modal-info > .decoration {
+  height: 100%;
+  width: 10px;
+  background-color: lightblue;
+}
+.modals > .modal-info > .text {
+  flex-grow: 1;
+  background-color: green;
 }
 
 /*# sourceMappingURL=index.css.map */
