--- a/villaride/style/scss/_block-1.scss
+++ b/villaride/style/scss/_block-1.scss
@@ -3,6 +3,11 @@
     background-image: url('../image/bg-1.jpg');
     background-repeat: no-repeat;
     background-position: center top;
+    position: relative;
+    > a[name=contacts]{
+      position: absolute;
+      top: -150px;
+    }
     > div {
       @media (max-width: 700px) {flex-direction: column; align-items: center;}
       > .block-1-left {
@@ -73,16 +78,10 @@
             border-radius: 27px;
             outline: none;
             border: none;
-            background: rgb(10,140,229);
-            background: linear-gradient(to bottom,  rgba(10,140,229,1) 0%,rgba(9,98,159,1) 100%);
             font-family: 'Proxima Nova Rg';
             color: white;
             text-transform: uppercase;
             font-size: 1.1em;
-            transition: $transition;
-            &:hover {
-              box-shadow: 0px 5px 5px 0px rgba(50, 50, 50, 0.5);
-            }
           }
           > .text {
             margin: 0 0 0 25px;
@@ -152,7 +151,6 @@
             height: 50px;
             width: 100%;
             margin: 0 0 20px 0;
-            border: 1px solid #cacaca;
             border-radius: 25px;
             outline: none;
             padding-left: 20px;
@@ -160,10 +158,6 @@
             box-sizing: border-box;
             font-family: 'Proxima Nova Lt';
             font-size: 1em;
-            transition: $transition;
-            &:hover {
-              box-shadow: 0px 5px 5px 0px rgba(50, 50, 50, 0.5);
-            }
           }
           > button {
             height: 50px;
@@ -172,16 +166,10 @@
             outline: none;
             border: none;
             border-radius: 25px;
-            background: rgb(255,84,0);
-            background: linear-gradient(to bottom,  rgba(255,84,0,1) 0%,rgba(237,18,0,1) 100%);
             font-family: 'Proxima Nova Rg';
             color: white;
             text-transform: uppercase;
             font-size: 1.1em;
-            transition: $transition;
-            &:hover {
-              box-shadow: 0px 5px 5px 0px rgba(50, 50, 50, 0.5);
-            }
           }
           > .form-checkbox {
             > input[type=checkbox]:checked ~.checkbox-field {
