--- a/villaride/style/scss/_block-5.scss
+++ b/villaride/style/scss/_block-5.scss
@@ -1,4 +1,10 @@
 .block-5 {
+  position: relative;
+  padding: 50px 0 0 0;
+  > a[name=video]{
+    position: absolute;
+    top: -80px;
+  }
   > div {
     > .title {
       > h2 {
