--- a/villaride/style/scss/_block-8.scss
+++ b/villaride/style/scss/_block-8.scss
@@ -1,4 +1,10 @@
 .block-8 {
+  position: relative;
+  padding: 50px 0 0 0;
+  > a[name=gallery]{
+    position: absolute;
+    top: -80px;
+  }
   > div {
     > .title {
       > h2 {
