--- a/villaride/style/scss/_header.scss
+++ b/villaride/style/scss/_header.scss
@@ -21,11 +21,18 @@
       font-size: 1.1em;
       @media (max-width: 1100px) { display: none; }
       > li {
+        padding: 10px 0 0 0;
         > a {
-          border-bottom: 1px solid rgba(255, 255, 255, 1);
-          transition: $transition;
-          &:hover {
-            border-bottom: 1px solid #404040;
+          &:hover > .decoration {
+            background-color: #25c24a;
+          }
+          > .decoration {
+            background-color: none;
+            height: 6px;
+            width: 100%;
+            border-radius: 6px;
+            transition: $transition;
+            margin-top: 5px;
           }
         }
       }
@@ -53,12 +60,6 @@
       height: 40px;
       width: 200px;
       border-radius: 20px;
-      border: 1px solid #404040;
-      transition: $transition;
-      &:hover {
-        background-color: #404040;
-        color: white;
-      }
       @media (max-width: 750px) { display: none; }
     }
     > .mobile-navigation {
