--- a/villaride/style/index.css
+++ b/villaride/style/index.css
@@ -249,6 +249,7 @@ button {
   height: 40px;
   width: 200px;
   border-radius: 20px;
+  outline: none;
 }
 @media (max-width: 750px) {
   .header > div > .header-button {
@@ -1108,6 +1109,13 @@ button {
   -o-object-fit: cover;
   object-fit: cover;
 }
+.block-4 > div > div > .card > .left > .product > .image > video {
+  height: 100%;
+  width: 100%;
+  border-radius: 5px;
+  -o-object-fit: cover;
+  object-fit: cover;
+}
 .block-4 > div > div > .card > .left > .product > .table {
   margin: 0 0 0 20px;
   flex-grow: 1;
@@ -1437,6 +1445,13 @@ button {
   -o-object-fit: cover;
   object-fit: cover;
 }
+.block-5 > div > .slider > .card-block > .card > .image > video {
+  height: 100%;
+  width: 100%;
+  border-radius: 10px;
+  -o-object-fit: cover;
+  object-fit: cover;
+}
 .block-5 > div > .slider > .card-block > .card > .play {
   position: absolute;
   top: 50%;
@@ -1757,6 +1772,13 @@ button {
   -o-object-fit: cover;
   object-fit: cover;
 }
+.block-7 > div > .slider > .card-block > .card > .image > video {
+  height: 100%;
+  width: 100%;
+  border-radius: 10px;
+  -o-object-fit: cover;
+  object-fit: cover;
+}
 .block-7 > div > .slider > .card-block > .card > .play {
   position: absolute;
   top: 50%;
@@ -1976,6 +1998,13 @@ button {
   -o-object-fit: cover;
   object-fit: cover;
 }
+.block-8 > div > .slider > .card-block > .card > .image > video {
+  height: 100%;
+  width: 100%;
+  border-radius: 10px;
+  -o-object-fit: cover;
+  object-fit: cover;
+}
 .block-8 > div > .slider > .pagination {
   height: 15px;
   width: 100%;
@@ -2170,7 +2199,7 @@ button {
   height: 40px;
   width: 200px;
   border-radius: 20px;
-  border: 1px solid #404040;
+  outline: none;
   transition: 0.3s;
 }
 .footer > div > .header-button:hover {
@@ -2261,13 +2290,12 @@ button {
 }
 
 .modals {
-  position: none;
+  position: fixed;
   top: 90px;
   left: 0;
   height: calc(100vh - 90px);
   width: 100%;
-  background-color: rgba(84, 84, 84, 0.9);
-  display: flex;
+  background-color: rgba(0, 0, 0, 0.9);
   justify-content: center;
   align-items: center;
   z-index: 100;
@@ -2278,19 +2306,351 @@ button {
     top: 125px;
   }
 }
+.modals > .image {
+  position: absolute;
+}
+.modals > .position-1 {
+  top: 12%;
+  left: 24%;
+  z-index: -1;
+}
+.modals > .position-1-1 {
+  top: 15%;
+  left: 37%;
+  z-index: -1;
+}
+.modals > .position-1-2 {
+  top: 30%;
+  left: 37%;
+  z-index: -1;
+}
+.modals > .position-2 {
+  top: 15%;
+  left: 68%;
+  z-index: -1;
+}
+.modals > .position-2-1 {
+  top: 70%;
+  left: 55%;
+  z-index: -1;
+}
+.modals > .position-2-2 {
+  top: 50%;
+  left: 55%;
+  z-index: -1;
+}
 .modals > .modal-info {
-  height: 100px;
-  width: 100px;
+  height: 100%;
+  max-height: 460px;
+  width: 95%;
+  max-width: 840px;
   background-color: white;
+  background-image: url("../image/bg-modal.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  border-radius: 50px;
+  overflow: hidden;
+  padding: 0 0 0 40px;
 }
 .modals > .modal-info > .decoration {
-  height: 100%;
-  width: 10px;
-  background-color: lightblue;
+  height: calc(100% - 80px);
+  margin: 40px 15px 0 0;
+  width: 12px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.modals > .modal-info > .decoration > div {
+  height: 12px;
+  width: 12px;
+  background-color: #c7e3ef;
+  border-radius: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.modals > .modal-info > .decoration > div:nth-child(odd) > div > div {
+  left: 50%;
+  top: 50%;
+  transform: translateX(-50%) translateY(-1px);
+  background: linear-gradient(to bottom, #0a85da 0%, rgba(10, 133, 218, 0) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr="#0a85da", endColorstr="#000a85da",GradientType=0 );
+}
+.modals > .modal-info > .decoration > div:nth-child(even) > div > div {
+  left: 50%;
+  bottom: 50%;
+  transform: translateX(-50%) translateY(1px);
+  background: linear-gradient(to bottom, rgba(10, 133, 218, 0) 0%, #0a85da 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr="#000a85da", endColorstr="#0a85da",GradientType=0 );
+}
+.modals > .modal-info > .decoration > div > div {
+  height: 6px;
+  width: 6px;
+  background-color: #0a85da;
+  border-radius: 50px;
+  position: relative;
+}
+.modals > .modal-info > .decoration > div > div > div {
+  position: absolute;
+  height: 20px;
+  width: 2px;
 }
 .modals > .modal-info > .text {
   flex-grow: 1;
-  background-color: green;
+  padding: 40px 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.modals > .modal-info > .text > div {
+  max-width: 500px;
+}
+.modals > .modal-info > .text > div > h3 {
+  font-family: "Proxima Nova Rg";
+  font-size: 1.2em;
+  font-weight: 400;
+}
+.modals > .modal-info > .text > div > h3 > span {
+  color: #d60909;
+}
+.modals > .modal-info > .text > div > h2 {
+  font-family: "Proxima Nova Rg";
+  font-size: 1.5em;
+  font-weight: 900;
+}
+.modals > .modal-info > .text > p {
+  max-width: 450px;
+  font-family: "Proxima Nova Rg";
+  font-size: 1em;
+  font-weight: 400;
+}
+.modals > .modal-info > .text > p > span {
+  font-family: "Proxima Nova Rg";
+  font-size: 1em;
+  font-weight: 900;
+}
+.modals > .modal-info > .close {
+  position: relative;
+}
+.modals > .modal-info > .close > .close-block {
+  position: absolute;
+  top: 30px;
+  right: 30px;
+  display: flex;
+  align-items: center;
+}
+.modals > .modal-info > .close > .close-block > .close-text {
+  font-family: "Proxima Nova Rg";
+  margin: 0 15px 0 0;
+  font-size: 1.5em;
+  font-weight: 400;
+}
+.modals > .modal-info > .close > .close-block > .close-icon {
+  height: 40px;
+  width: 40px;
+  border: 3px solid #333333;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: white;
+  cursor: pointer;
+}
+.modals > .modal-info > .close > .close-block > .close-icon:hover {
+  border: 3px solid #23bc47;
+}
+.modals > .modal-info > .close > .close-block > .close-icon > .close-sigil {
+  font-size: 2.5em;
+  margin: 0 0 5px 0;
+}
+.modals > .modal-form {
+  height: 100%;
+  max-height: 580px;
+  width: 100%;
+  max-width: 450px;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+.modals > .modal-form > .close {
+  position: relative;
+  width: 100%;
+}
+.modals > .modal-form > .close > .close-block {
+  position: absolute;
+  top: 0;
+  right: 0;
+  display: flex;
+  align-items: center;
+}
+.modals > .modal-form > .close > .close-block > .close-text {
+  font-family: "Proxima Nova Rg";
+  margin: 0 15px 0 0;
+  font-size: 1.2em;
+  font-weight: 400;
+  color: white;
+}
+.modals > .modal-form > .close > .close-block > .close-icon {
+  height: 40px;
+  width: 40px;
+  border: 3px solid white;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: none;
+  cursor: pointer;
+}
+.modals > .modal-form > .close > .close-block > .close-icon:hover {
+  border: 3px solid #23bc47;
+}
+.modals > .modal-form > .close > .close-block > .close-icon > .close-sigil {
+  font-size: 2.5em;
+  margin: 0 0 5px 0;
+  color: white;
+}
+.modals > .modal-form > form {
+  background-color: white;
+  height: 100%;
+  max-height: 525px;
+  width: 100%;
+  max-width: 385px;
+  border-radius: 5px;
+  padding: 85px 35px 40px 35px;
+  box-sizing: border-box;
+}
+.modals > .modal-form > form > h2 {
+  font-family: "Proxima Nova Bl";
+  font-size: 2em;
+  font-weight: 900;
+  text-transform: uppercase;
+  text-align: center;
+}
+.modals > .modal-form > form > h2 > span {
+  color: #21b744;
+}
+.modals > .modal-form > form > p {
+  font-family: "Proxima Nova Rg";
+  font-size: 1em;
+  font-weight: 400;
+  text-align: center;
+}
+.modals > .modal-form > form > input {
+  height: 50px;
+  width: 100%;
+  border-radius: 25px;
+  outline: none;
+  padding-left: 20px;
+  overflow: hidden;
+  box-sizing: border-box;
+  font-family: "Proxima Nova Lt";
+  font-size: 1em;
+}
+.modals > .modal-form > form > button {
+  height: 50px;
+  width: 100%;
+  outline: none;
+  border: none;
+  border-radius: 25px;
+  font-family: "Proxima Nova Rg";
+  color: white;
+  text-transform: uppercase;
+  font-size: 1.1em;
+}
+.modals > .modal-form > form > .form-checkbox > input[type=checkbox]:checked ~ .checkbox-field {
+  background-color: grey;
+}
+.modals > .modal-form > form > .form-checkbox > .checkbox-field {
+  height: 18px;
+  width: 18px;
+  border: 1px solid grey;
+  cursor: pointer;
+  border-radius: 3px;
+  transition: 0.3s;
+}
+.modals > .modal-form > form > .form-checkbox > .checkbox-label {
+  margin-left: 20px;
+  max-width: 200px;
+  font-family: "Proxima Nova Lt";
+  font-size: 1em;
+  cursor: pointer;
+}
+.modals > .modal-form > form > .form-checkbox > .checkbox-label > a {
+  text-decoration: underline;
+  color: #1a8fdf;
+}
+.modals > .modal-thanks {
+  height: 100%;
+  max-height: 230px;
+  width: 100%;
+  max-width: 400px;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+.modals > .modal-thanks > .close {
+  position: relative;
+  width: 100%;
+}
+.modals > .modal-thanks > .close > .close-block {
+  position: absolute;
+  top: 0;
+  right: 0;
+  display: flex;
+  align-items: center;
+}
+.modals > .modal-thanks > .close > .close-block > .close-text {
+  font-family: "Proxima Nova Rg";
+  margin: 0 15px 0 0;
+  font-size: 1.2em;
+  font-weight: 400;
+  color: white;
+}
+.modals > .modal-thanks > .close > .close-block > .close-icon {
+  height: 40px;
+  width: 40px;
+  border: 3px solid white;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: none;
+  cursor: pointer;
+}
+.modals > .modal-thanks > .close > .close-block > .close-icon:hover {
+  border: 3px solid #23bc47;
+}
+.modals > .modal-thanks > .close > .close-block > .close-icon > .close-sigil {
+  font-size: 2.5em;
+  margin: 0 0 5px 0;
+  color: white;
+}
+.modals > .modal-thanks > .info {
+  background-color: white;
+  height: 100%;
+  max-height: 170px;
+  width: 100%;
+  max-width: 400px;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.modals > .modal-thanks > .info > h2 {
+  font-family: "Proxima Nova Bl";
+  font-size: 2em;
+  font-weight: 900;
+  text-transform: uppercase;
+  text-align: center;
+  color: #21b744;
+}
+.modals > .modal-thanks > .info > p {
+  font-family: "Proxima Nova Rg";
+  text-align: center;
+  font-size: 1.2em;
+  max-width: 310px;
+  margin: 0 auto;
 }
 
 /*# sourceMappingURL=index.css.map */
