--- a/villaride/style/scss/_modals.scss
+++ b/villaride/style/scss/_modals.scss
@@ -1,31 +1,367 @@
 .modals {
-  position: none;
+  position: fixed;
   top: 90px;
   left: 0;
   height: calc(100vh - 90px);
   width: 100%;
-  background-color: rgba(84,84,84,0.9);
-  display: flex;
+  background-color: rgba(0,0,0,0.9);
   justify-content: center;
   align-items: center;
   z-index: 100;
   @media (max-width: 500px) { top: 125px; }
   overflow-y: auto;
+  > .image {
+    position: absolute;
+  }
+  > .position-1 {
+    top: 12%;
+    left: 24%;
+    z-index: -1;
+
+  }
+  > .position-1-1 {
+    top: 15%;
+    left: 37%;
+    z-index: -1;
+
+  }
+  > .position-1-2 {
+    top: 30%;
+    left: 37%;
+    z-index: -1;
+
+  }
+  > .position-2 {
+    top: 15%;
+    left: 68%;
+    z-index: -1;
+  }
+  > .position-2-1 {
+    top: 70%;
+    left: 55%;
+    z-index: -1;
+  }
+  > .position-2-2 {
+    top: 50%;
+    left: 55%;
+    z-index: -1;
+  }
   > .modal-info {
-    height: 100px;
-    width: 100px;
+    height: 100%;
+    max-height: 460px;
+    width: 95%;
+    max-width: 840px;
     background-color: white;
+    background-image: url('../image/bg-modal.jpg');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    border-radius: 50px;
+    overflow: hidden;
+    padding: 0 0 0 40px;
+
     > .decoration {
-      height: 100%;
-      width: 10px;
-      background-color: lightblue
+      height: calc(100% - 80px);
+      margin: 40px 15px 0 0;
+      width: 12px;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      > div {
+        height: 12px;
+        width: 12px;
+        background-color: #c7e3ef;
+        border-radius: 50px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        &:nth-child(odd) > div > div {
+          left: 50%;
+          top: 50%;
+          transform: translateX(-50%) translateY(-1px);
+          background: linear-gradient(to bottom,  rgba(10,133,218,1) 0%,rgba(10,133,218,0) 100%);
+          filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#0a85da', endColorstr='#000a85da',GradientType=0 );
+        }
+        &:nth-child(even) > div > div {
+          left: 50%;
+          bottom: 50%;
+          transform: translateX(-50%) translateY(1px);
+          background: linear-gradient(to bottom,  rgba(10,133,218,0) 0%,rgba(10,133,218,1) 100%);
+          filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000a85da', endColorstr='#0a85da',GradientType=0 );
+        }
+        > div {
+          height: 6px;
+          width: 6px;
+          background-color: #0a85da;
+          border-radius: 50px;
+          position: relative;
+          > div {
+            position: absolute;
+            height: 20px;
+            width: 2px;
+          }
+        }
+      }
     }
     > .text {
       flex-grow: 1;
-      background-color: green;
+      padding: 40px 0;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      > div {
+        max-width: 500px;
+        > h3 {
+          font-family: 'Proxima Nova Rg';
+          font-size: 1.2em;
+          font-weight: 400;
+          > span {
+            color: #d60909;
+          }
+        }
+        > h2 {
+          font-family: 'Proxima Nova Rg';
+          font-size: 1.5em;
+          font-weight: 900;
+        }
+      }
+      > p {
+        max-width: 450px;
+        font-family: 'Proxima Nova Rg';
+        font-size: 1em;
+        font-weight: 400;
+
+        > span {
+          font-family: 'Proxima Nova Rg';
+          font-size: 1em;
+          font-weight: 900;
+        }
+      }
     }
     > .close {
+      position: relative;
+      > .close-block {
+        position: absolute;
+        top: 30px;
+        right: 30px;
+        display: flex;
+        align-items: center;
+        > .close-text {
+          font-family: 'Proxima Nova Rg';
+          margin: 0 15px 0 0;
+          font-size: 1.5em;
+          font-weight: 400;
+        }
+        > .close-icon {
+          height: 40px;
+          width: 40px;
+          border: 3px solid #333333;
+          border-radius: 50%;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          background-color: white;
+          cursor: pointer;
+          &:hover {
+            border: 3px solid #23bc47;
+          }
+          > .close-sigil {
+            font-size: 2.5em;
+            margin: 0 0 5px 0;
+          }
+        }
+      }
+    }
+  }
+  > .modal-form {
+    height: 100%;
+    max-height: 580px;
+    width: 100%;
+    max-width: 450px;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
 
+    > .close {
+      position: relative;
+      width: 100%;
+      > .close-block {
+        position: absolute;
+        top: 0;
+        right: 0;
+        display: flex;
+        align-items: center;
+        > .close-text {
+          font-family: 'Proxima Nova Rg';
+          margin: 0 15px 0 0;
+          font-size: 1.2em;
+          font-weight: 400;
+          color: white;
+        }
+        > .close-icon {
+          height: 40px;
+          width: 40px;
+          border: 3px solid white;
+          border-radius: 50%;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          background-color: none;
+          cursor: pointer;
+          &:hover {
+            border: 3px solid #23bc47;
+          }
+          > .close-sigil {
+            font-size: 2.5em;
+            margin: 0 0 5px 0;
+            color: white;
+          }
+        }
+      }
+    }
+    > form {
+      background-color: white;
+      height: 100%;
+      max-height: 525px;
+      width: 100%;
+      max-width: 385px;
+      border-radius: 5px;
+      padding: 85px 35px 40px 35px;
+      box-sizing: border-box;
+      > h2 {
+        font-family: 'Proxima Nova Bl';
+        font-size: 2em;
+        font-weight: 900;
+        text-transform: uppercase;
+        text-align: center;
+        > span {
+          color: #21b744;
+        }
+      }
+      > p {
+        font-family: 'Proxima Nova Rg';
+        font-size: 1em;
+        font-weight: 400;
+        text-align: center;
+      }
+      > input {
+        height: 50px;
+        width: 100%;
+        border-radius: 25px;
+        outline: none;
+        padding-left: 20px;
+        overflow: hidden;
+        box-sizing: border-box;
+        font-family: 'Proxima Nova Lt';
+        font-size: 1em;
+      }
+      > button {
+        height: 50px;
+        width: 100%;
+        outline: none;
+        border: none;
+        border-radius: 25px;
+        font-family: 'Proxima Nova Rg';
+        color: white;
+        text-transform: uppercase;
+        font-size: 1.1em;
+      }
+      > .form-checkbox {
+        > input[type=checkbox]:checked ~.checkbox-field {
+          background-color: grey;
+        }
+        > .checkbox-field {
+          height: 18px;
+          width: 18px;
+          border: 1px solid grey;
+          cursor: pointer;
+          border-radius: 3px;
+          transition: $transition;
+        }
+        > .checkbox-label {
+          margin-left: 20px;
+          max-width: 200px;
+          font-family: 'Proxima Nova Lt';
+          font-size: 1em;
+          cursor: pointer;
+          > a {
+            text-decoration: underline;
+            color: #1a8fdf;
+          }
+        }
+      }
+    }
+  }
+  > .modal-thanks {
+    height: 100%;
+    max-height: 230px;
+    width: 100%;
+    max-width: 400px;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    > .close {
+      position: relative;
+      width: 100%;
+      > .close-block {
+        position: absolute;
+        top: 0;
+        right: 0;
+        display: flex;
+        align-items: center;
+        > .close-text {
+          font-family: 'Proxima Nova Rg';
+          margin: 0 15px 0 0;
+          font-size: 1.2em;
+          font-weight: 400;
+          color: white;
+        }
+        > .close-icon {
+          height: 40px;
+          width: 40px;
+          border: 3px solid white;
+          border-radius: 50%;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          background-color: none;
+          cursor: pointer;
+          &:hover {
+            border: 3px solid #23bc47;
+          }
+          > .close-sigil {
+            font-size: 2.5em;
+            margin: 0 0 5px 0;
+            color: white;
+          }
+        }
+      }
+    }
+    > .info {
+      background-color: white;
+      height: 100%;
+      max-height: 170px;
+      width: 100%;
+      max-width: 400px;
+      border-radius: 5px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      > h2 {
+        font-family: 'Proxima Nova Bl';
+        font-size: 2em;
+        font-weight: 900;
+        text-transform: uppercase;
+        text-align: center;
+        color: #21b744;
+      }
+      > p {
+        font-family: 'Proxima Nova Rg';
+        text-align: center;
+        font-size: 1.2em;
+        max-width: 310px;
+        margin: 0 auto;
+      }
     }
   }
 }
