--- a/villaride/style/scss/_block-1.scss
+++ b/villaride/style/scss/_block-1.scss
@@ -104,6 +104,8 @@
           > .icons {
             > a {
               margin: 0 5px 0 0;
+              height: 35px;
+              width: 35px;
             }
             > a:last-child {
               margin: 0;
