--- a/uyut/style/index.css
+++ b/uyut/style/index.css
@@ -1,68 +1,96 @@
-// #{calc(50% - 10px)};
-// @media (max-width: 780px) {}
 * {
   margin: 0;
   padding: 0;
 }
+
 html {
   width: 100%;
   height: 100%;
   scroll-behavior: smooth;
 }
+
 body {
   width: 100%;
   height: 100%;
-  background-color: $bgColor;
-  font-family: $fontFamily;
-  font-size: $fontSize;
-  font-weight: $fontWeight;
-  color: $fontColor;
+  background-color: lightblue;
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  font-weight: 300;
+  color: #222222;
   -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
+
 a {
-	text-decoration: none;
-	color: #222222;
+  text-decoration: none;
+  color: #222222;
 }
+
 button {
   cursor: pointer;
 }
+
 .container {
-  max-width: 1210px;
+  max-width: 1200px;
   margin: 0 auto;
 }
+
 .h-100 {
   height: 100%;
 }
+
 .w-100 {
   width: 100%;
 }
+
 .d-flex {
   display: flex;
 }
+
 .d-none {
-display: none;
+  display: none;
 }
+
 .flex-column {
   flex-direction: column;
 }
+
 .flex-justify-start {
   justify-content: flex-start;
 }
+
 .space-justify-around {
   justify-content: space-around;
 }
+
 .flex-justify-between {
   justify-content: space-between;
 }
+
 .flex-justify-center {
   justify-content: center;
 }
+
 .flex-align-center {
   align-items: center;
 }
+
 .flex-align-baseline {
   align-items: baseline;
 }
+
+.header {
+  background-color: pink;
+}
+
+.main {
+  background-color: lightblue;
+}
+
+.footer {
+  background-color: yellow;
+}
+
+/*# sourceMappingURL=index.css.map */
