--- a/villaride/style/scss/_block-3.scss
+++ b/villaride/style/scss/_block-3.scss
@@ -91,7 +91,19 @@
              object-fit: cover;
         }
       }
-
+      > .play {
+        height: 100px;
+        width: 100px;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translateX(-50%) translateY(-50%);
+        cursor: pointer;
+        transition: $transition;
+        &:hover {
+          transform: scale(1.1) translateX(-49%) translateY(-49%);
+        }
+      }
     }
   }
 }
