--- a/villaride/style/scss/_block-4.scss
+++ b/villaride/style/scss/_block-4.scss
@@ -152,24 +152,44 @@
           > .product {
             margin: 30px 0 0 0;
             @media (max-width: 750px) { flex-direction: column; align-items: center;}
-            > .image {
+            > .video {
+              position: relative;
               height: 240px;
               width: 100%;
               max-width: 390px;
               border-radius: 5px;
-              > img {
+              > .image {
                 height: 100%;
                 width: 100%;
                 border-radius: 5px;
-                -o-object-fit: cover;
-                   object-fit: cover;
+                > img {
+                  height: 100%;
+                  width: 100%;
+                  border-radius: 5px;
+                  -o-object-fit: cover;
+                     object-fit: cover;
+                }
+                > video {
+                  height: 100%;
+                  width: 100%;
+                  border-radius: 5px;
+                  outline: none;
+                  -o-object-fit: cover;
+                     object-fit: cover;
+                }
               }
-              > video {
-                height: 100%;
-                width: 100%;
-                border-radius: 5px;
-                -o-object-fit: cover;
-                   object-fit: cover;
+              > .play {
+                height: 100px;
+                width: 100px;
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                transform: translateX(-50%) translateY(-50%);
+                cursor: pointer;
+                transition: $transition;
+                &:hover {
+                  transform: scale(1.1) translateX(-49%) translateY(-49%);
+                }
               }
             }
             > .table {
