--- a/villaride/style/scss/_block-5.scss
+++ b/villaride/style/scss/_block-5.scss
@@ -52,7 +52,12 @@
         z-index: 1;
         background-color: white;
         border-radius: 50%;
-        @media (max-width: 700px) { display: none;}
+        transition: $transition;
+        transform: rotate(180deg);
+        &:hover {
+          transform: scale(1.1) rotate(180deg);
+        }
+        // @media (max-width: 700px) { display: none;}
       }
       > .right {
         height: 50px;
@@ -66,13 +71,17 @@
         right: 1%;
         cursor: pointer;
         z-index: 1;
-        background-color: white;
+        background: white;
         border-radius: 50%;
-        @media (max-width: 700px) { display: none;}
+        transition: $transition;
+        &:hover {
+          transform: scale(1.1);
+        }
+        // @media (max-width: 700px) { display: none;}
       }
       > .card-block {
         width: 100%;
-        @media (max-width: 700px) { flex-direction: column; align-items: center;}
+        @media (max-width: 700px) { justify-content: center; align-items: center; >.card:nth-child(2) {display: none;}}
         > .card {
           width: #{calc(50% - 30px)};
           position: relative;
@@ -100,6 +109,8 @@
             }
           }
           > .play {
+            height: 100px;
+            width: 100px;
             position: absolute;
             top: 50%;
             left: 50%;
